# CPS_352

./: .gitignore  README.md
project_1/: README.md  main.cpp  meson.build
project_1/backup/: main.cpp  meson.build
project_1/include/: events.hpp
project_1/src/: events.cpp  main.cpp
project_2/: framework.py  image_compressor.py  kmean.py
